// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test one 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "height": 50,
        "marginTop": 10,
        "paddingLeft": "5%",
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/dot.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "alignContent": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 20,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="[missing \\"en.enter_address_title\\" translation]"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "borderBottomWidth": 1,
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 8,
                "width": "100%",
              },
              Object {
                "borderColor": "#67D44D",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="value"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Test three 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "height": 50,
        "marginTop": 10,
        "paddingLeft": "5%",
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/kusama.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "alignContent": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 20,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="[missing \\"en.enter_address_title\\" translation]"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "borderBottomWidth": 1,
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 8,
                "width": "100%",
              },
              Object {
                "borderColor": "#DADADA",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Test two 1`] = `
<View
  style={
    Object {
      "alignContent": "center",
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "height": 50,
        "marginTop": 10,
        "paddingLeft": "5%",
        "width": "95%",
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../assets/img/kusama.png",
          }
        }
        style={
          Object {
            "borderColor": "black",
            "borderRadius": 25,
            "borderWidth": 0.8,
            "height": 50,
            "overflow": "hidden",
            "width": 50,
          }
        }
      />
      <View
        style={
          Object {
            "alignContent": "center",
            "flex": 1,
            "justifyContent": "center",
            "marginLeft": 20,
          }
        }
      >
        <TextInput
          allowFontScaling={true}
          onChangeText={[Function]}
          onEndEditing={[Function]}
          placeholder="[missing \\"en.enter_address_title\\" translation]"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "borderBottomWidth": 1,
                "color": "black",
                "fontFamily": "Roboto-Regular",
                "fontSize": 15,
                "fontStyle": "normal",
                "fontWeight": "normal",
                "paddingBottom": 8,
                "paddingLeft": 0,
                "paddingRight": 0,
                "paddingTop": 8,
                "width": "100%",
              },
              Object {
                "borderColor": "#EA4335",
              },
            ]
          }
          underlineColorAndroid="transparent"
          value="1exaAg2VJRQbyUBAeXcktChCAqjVP9TUxF3zo23R2T6EGdE"
        />
      </View>
    </View>
  </View>
</View>
`;
